--- a/index.html
+++ b/index.html
@@ -379,11 +379,11 @@
         // SUBSTITUA ESTAS INFORMAÇÕES pelas suas configurações do Firebase
         const firebaseConfig = {
             apiKey: "AIzaSyBVJLo67BboyuHFb6LLbEs_bn6tUIs_ml0",
-            authDomain: "SEU_AUTH_DOMAIN",
-            projectId: "SEU_PROJECT_ID",
-            storageBucket: "SEU_STORAGE_BUCKET",
-            messagingSenderId: "SEU_MESSAGING_SENDER_ID",
-            appId: "SEU_APP_ID"
+            authDomain: "ecoheart-3b810.firebaseapp.com",
+            projectId: "ecoheart-3b810",
+            storageBucket: "ecoheart-3b810.firebasestorage.app",
+            messagingSenderId: "628562934569",
+            appId: "1:628562934569:web:e047169365a39a50445538"
         };
 
         // Inicializar Firebase
