--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EcoHeart - Laudos de Ecocardiografia</title>
+    <title>EchoHeart - Laudos de Ecocardiografia</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <!-- PDF Scripts -->
@@ -56,7 +56,7 @@
     <div class="container py-4">
         <header class="pb-3 mb-4 border-bottom">
             <div class="d-flex align-items-center">
-                <h1 class="h3 me-auto text-primary">EcoHeart</h1>
+                <h1 class="h3 me-auto text-primary">EchoHeart</h1>
                 <div class="d-flex align-items-center">
                     <span id="statusIndicator" class="badge bg-secondary">Aguardando</span>
                 </div>
