--- a/index.html
+++ b/index.html
@@ -64,25 +64,92 @@
         </header>
 
         <div class="row mb-4">
-            <div class="col-md-6">
-                <div class="mb-3">
-                    <label for="patientName" class="form-label">Nome do Paciente</label>
-                    <input type="text" class="form-control" id="patientName" placeholder="Ex: João Silva">
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="mb-3">
-                    <label for="patientAge" class="form-label">Idade</label>
-                    <input type="number" class="form-control" id="patientAge" placeholder="Ex: 65">
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="mb-3">
-                    <label for="patientId" class="form-label">ID/Registro</label>
-                    <input type="text" class="form-control" id="patientId" placeholder="Ex: 12345">
-                </div>
-            </div>
+    <div class="col-md-4">
+        <div class="mb-3">
+            <label for="patientName" class="form-label">Nome do Paciente</label>
+            <input type="text" class="form-control" id="patientName" placeholder="Nome completo">
         </div>
+    </div>
+    <div class="col-md-2">
+        <div class="mb-3">
+            <label for="patientAge" class="form-label">Idade</label>
+            <input type="number" class="form-control" id="patientAge" placeholder="Idade">
+        </div>
+    </div>
+    <div class="col-md-2">
+        <div class="mb-3">
+            <label for="patientSex" class="form-label">Sexo</label>
+            <select id="patientSex" class="form-select">
+                <option value="M">Masculino</option>
+                <option value="F">Feminino</option>
+            </select>
+        </div>
+    </div>
+    <div class="col-md-2">
+        <div class="mb-3">
+            <label for="patientHeight" class="form-label">Altura (cm)</label>
+            <input type="number" class="form-control" id="patientHeight" placeholder="Ex: 170">
+        </div>
+    </div>
+    <div class="col-md-2">
+        <div class="mb-3">
+            <label for="patientWeight" class="form-label">Peso (kg)</label>
+            <input type="number" class="form-control" id="patientWeight" placeholder="Ex: 70">
+        </div>
+    </div>
+</div>
+<div class="row mb-4">
+    <div class="col-md-4">
+        <div class="mb-3">
+            <label for="patientAddress" class="form-label">Endereço</label>
+            <input type="text" class="form-control" id="patientAddress" placeholder="Endereço completo">
+        </div>
+    </div>
+    <div class="col-md-2">
+        <div class="mb-3">
+            <label for="patientCity" class="form-label">Cidade</label>
+            <input type="text" class="form-control" id="patientCity" placeholder="Cidade">
+        </div>
+    </div>
+    <div class="col-md-3">
+        <div class="mb-3">
+            <label for="reqDoctor" class="form-label">Médico Solicitante</label>
+            <input type="text" class="form-control" id="reqDoctor" placeholder="Nome do médico">
+        </div>
+    </div>
+    <div class="col-md-3">
+        <div class="mb-3">
+            <label for="patientInsurance" class="form-label">Convênio</label>
+            <input type="text" class="form-control" id="patientInsurance" placeholder="Convênio">
+        </div>
+    </div>
+</div>
+<div class="row mb-4">
+    <div class="col-md-3">
+        <div class="mb-3">
+            <label for="patientCPF" class="form-label">CPF</label>
+            <input type="text" class="form-control" id="patientCPF" placeholder="000.000.000-00">
+        </div>
+    </div>
+    <div class="col-md-3">
+        <div class="mb-3">
+            <label for="patientRG" class="form-label">RG</label>
+            <input type="text" class="form-control" id="patientRG" placeholder="00.000.000-0">
+        </div>
+    </div>
+    <div class="col-md-3">
+        <div class="mb-3">
+            <label for="patientPhone" class="form-label">Telefone</label>
+            <input type="text" class="form-control" id="patientPhone" placeholder="(00) 00000-0000">
+        </div>
+    </div>
+    <div class="col-md-3">
+        <div class="mb-3">
+            <label for="patientId" class="form-label">ID/Registro</label>
+            <input type="text" class="form-control" id="patientId" placeholder="Número de registro">
+        </div>
+    </div>
+</div>
 
         <div class="row mb-3">
             <div class="col-12">
